--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "axios": "^1.9.0",
+    "babel-preset-expo": "~13.0.0",
     "expo": "~53.0.11",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -41,8 +42,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "babel-preset-expo": "~13.0.0"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
