--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.9.0",
     "babel-preset-expo": "~13.0.0",
     "expo": "~53.0.11",
+    "expo-av": "~15.1.6",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -37,6 +38,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
@@ -44,8 +46,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-av": "~15.1.6"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
