--- a/app.json
+++ b/app.json
@@ -39,7 +39,7 @@
       "typedRoutes": true
     },
     "extra": {
-      "EXPO_PUBLIC_API_URL": "http://localhost:3000"
+      "EXPO_PUBLIC_API_URL": "http://192.168.0.103:3000"
     }
   }
 }
